--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
 
       <h3>History</h3>
       <ul id="list" class="list">
-          <li class="minus"></li>
+          <li class="minus">Cash <span>=$400</span><button class="delete-btn">X</button></li>
       </ul>
       
+      
+
     </div>
 
     <script src="script.js"></script>
