--- a/index.html
+++ b/index.html
@@ -28,7 +28,18 @@
           <li class="minus">Cash <span>=$400</span><button class="delete-btn">X</button></li>
       </ul>
       
-      
+      <h3>Add New Transaction</h3>
+      <formid="form">
+          <div class="form-control">
+              <label for="text">Text</label>
+              <input type="text" id="text" placeholder="Enter text....">
+          </div>
+          <div class="from-control">
+              <label for="amount">Amount <br>(negative - expense, positive - income)</label>
+              <input type="number" id="amount" placeholder="Enter amount....">
+          </div>
+          <button class="btn">Add Transaction</button>
+      </form>
 
     </div>
 
