--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
       </div>
 
-      <h3>History</h3>
+      <h3>Transaction History</h3>
       <ul id="list" class="list">
           <!-- <li class="minus">Cash <span>-$400</span><button class="delete-btn">X</button></li> -->
       </ul>
