--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
       <h3>Add New Transaction</h3>
       <form id="form">
           <div class="form-control">
-              <label for="text">Text</label>
+              <label for="text">Transaction Name</label>
               <input type="text" id="text" placeholder="Enter text....">
           </div>
           <div class="from-control">
-              <label for="amount">Amount <br>(negative - expense, positive - income)</label>
+              <label for="amount">Amount <br>( negative sign for expense, positive # for income)</label>
               <input type="number" id="amount" placeholder="Enter amount....">
           </div>
           <button class="btn">Add Transaction</button>
