--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <input type="text" id="text" placeholder="Enter text....">
           </div>
           <div class="from-control">
-              <label for="amount">Amount <br>( negative sign for expense, positive # for income)</label>
+              <label for="amount">Amount <br>( negative sign for expense, positive # for income whole numbers only)</label>
               <input type="number" id="amount" placeholder="Enter amount....">
           </div>
           <button class="btn">Add Transaction</button>
