--- a/index.html
+++ b/index.html
@@ -25,22 +25,24 @@
 
       <h3>Transaction History</h3>
       <ul id="list" class="list">
-          <!-- <li class="minus">Cash <span>-$400</span><button class="delete-btn">X</button></li> -->
+        <!-- <li class="minus">Cash <span>-$400</span><button class="delete-btn">X</button></li> -->
       </ul>
-      
+
       <h3>Add New Transaction</h3>
       <form id="form">
-          <div class="form-control">
-              <label for="text">Transaction Name</label>
-              <input type="text" id="text" placeholder="Enter text....">
-          </div>
-          <div class="from-control">
-              <label for="amount">Amount <br>( negative sign for expense, positive # for income whole numbers only)</label>
-              <input type="number" id="amount" placeholder="Enter amount....">
-          </div>
-          <button class="btn">Add Transaction</button>
+        <div class="form-control">
+          <label for="text">Transaction Name</label>
+          <input type="text" id="text" placeholder="Enter text...." />
+        </div>
+        <div class="from-control">
+          <label for="amount"
+            >Amount <br />( negative sign for expense, positive # for income
+            whole numbers only)</label
+          >
+          <input type="number" id="amount" placeholder="Enter amount...." />
+        </div>
+        <button class="btn">Add Transaction</button>
       </form>
-
     </div>
 
     <script src="script.js"></script>
